home + randomBeer page

--- a/src/App.css
+++ b/src/App.css
@@ -2,45 +2,7 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-/*************************** HEADER ****************************/
-
-nav {
-  display:flex;
-  flex-direction:row;
-  align-items:center;
-  
-}
-
-nav a {
-  color:white;
-  background-color:rgb(103,193,247);
-  padding:1.45rem;
-  border:1px solid white;
-  border-top:none;
-  border-bottom:none;
-}
-
-/*************************** HEADER ****************************/
+/*************************** HEADER - NAV ****************************/
 
 #header {
   height:4rem;
@@ -57,7 +19,56 @@ nav a {
   color:white;
 }
 
-/*************************** BEER LIST ****************************/
+nav {
+  display:flex;
+  flex-direction:row;
+  align-items:center;
+  margin-bottom:1rem;
+}
+
+nav a {
+  color:white;
+  background-color:rgb(103,193,247);
+  padding:1.45rem;
+  border:1px solid white;
+  border-top:none;
+  border-bottom:none;
+}
+
+/************$$$*************** HOME *************$$$***************/
+
+.Home section {
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  max-width:800px;
+  margin:0 auto;
+}
+
+.Home section img, .Home section p, .Home section h2 {
+  margin:1rem auto;
+  width:95vw;
+  max-width:800px;
+}
+
+.Home section h2, .Home section p {
+  text-align:left;
+}
+
+.Home h2  {
+  color:#666;
+}
+
+.Home p  {
+  color:#999;
+}
+
+.Home a {  
+  border:none;
+}
+
+
+/************$$$*************** BEER LIST *************$$$***************/
 
 div#beerlist-container  {
   display:flex;
